codegen/ui_tests/rhai_fn_global_multiple.stderr
error: namespace is already set to 'global'
  --> ui_tests/rhai_fn_global_multiple.rs:12:23
   |
12 |     #[rhai_fn(global, internal)]
   |                       ^^^^^^^^
